# nedb

./: .gitignore  .gitmodules  COMMITS.md  LICENSE  README.md  codemagic.yaml  ideas.md  index.d.ts  index.js  nedb-inspector.mjs  nedbd-v2.js  package.json  pyproject.toml
.github/workflows/: release-distros.yml  release.yml
apps/nedb-studio/: README.md  package.json
apps/nedb-studio/src/lib/: api.ts
apps/nedb-studio/src/server/: generate.ts
bench/: bench_redis.py  benchmarks.py
client/node/: README.md  package.json
client/node/src/: index.ts
client/python/: README.md  pyproject.toml
client/python/nedb_client/: __init__.py
docs/: CLI.md  DURABILITY.md  REPLICATION.md  SPEC.md  index.html  reference.html
docs/handoff/: 2026-06-26_112359-0400_nedb-v2.3.34-segment-observability-scoped-verify.md  2026-07-01_155505Z_nedb-tip-collection-durability.md  2026-07-02_170700Z_pread-handle-cache-and-correctness-quickwins.md
examples/: demo.py  fakeredis_demo.py
nedb/: __init__.py  cascade.py  engine.py  index.py  log.py  merkle.py  query.py  relations.py  store.py
python/nedb/: __init__.py  crypto.py  engine.py  proof.py  query.py  server.py  snapshot.py  wrap_redis.py
rust/: Cargo.toml
rust/crates/nedb-core/: Cargo.toml
rust/crates/nedb-core/src/: lib.rs  log.rs  store.rs
rust/crates/nedb-node/: Cargo.toml
rust/crates/nedb-node/src/: lib.rs
rust/crates/nedb-py/: Cargo.toml  pyproject.toml
rust/crates/nedb-py/src/: lib.rs
rust/nedb-v2/: Cargo.toml  README.md
rust/nedb-v2/examples/: exit_flush_demo.rs  v3_bench.rs
rust/nedb-v2/src/: db.rs  exit.rs  graph.rs  index.rs  lib.rs  main.rs  migrate.rs  nql.rs  segment.rs  server.rs  store.rs
rust/nedb-v2/tests/: nedb_cli.rs
scripts/: extract_native.py  release.py
test/: inspector.test.mjs
tests/: test_celebration.py  test_celebration_v2.py  test_dag.py  test_dag_perf.py  test_nedb.py  test_proof.py  test_the_will.py  test_v050.py  test_wrap_redis.py  test_wrap_redis_nedbd.py
tools/: seed_studio_schema.py
