# Pure-Python reference package (runs everywhere, no build step).
# The accelerated wheel is built from ../rust/crates/nedb-py via maturin in CI.
#
# NOTE: the import name is `nedb`. The PyPI *distribution* name is `nedb-engine`
# because `nedb` is already taken on PyPI (verify before release; alt: scope/rename).
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nedb-engine"
version = "0.1.0"
description = "NEDB — a versioned, self-compressing, time-traveling embedded database (replay-protected, idempotent, relational, searchable)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Interchained" }]
keywords = ["database", "embedded", "mvcc", "time-travel", "versioning",
            "compression", "dedup", "graph", "search", "redis", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Database :: Database Engines/Servers",
]

[project.urls]
Homepage = "https://github.com/interchained/nedb"
Repository = "https://github.com/interchained/nedb"

[tool.setuptools]
packages = ["nedb"]
