[workspace]
resolver = "2"
members = [
    "crates/nedb-core",
    "crates/nedb-py",
    "crates/nedb-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/interchained/nedb"
authors = ["Interchained"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
