[package]
name = "nedb-core"
description = "NEDB production core: nonce-enforced hash-chained log, MVCC store, time-travel."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"
