[package]
name = "nedb-py"
description = "PyO3 bindings for nedb-core → the `nedb` PyPI wheel."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "nedb"
crate-type = ["cdylib"]

[dependencies]
nedb-core = { path = "../nedb-core" }
serde_json = "1"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
